[project]
name = "qgss-2025" # for IBM Qiskit Global Summer School 2025
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "qiskit>=2.1.0",
    "qiskit-ibm-runtime>=0.40.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "poethepoet>=0.36.0",
    "pylatexenc>=2.10",
    "ruff>=0.12.2",
]

[tool.poe.tasks]
format = "uv run ruff format"
lab = "uv run jupyter lab"
