[project]
name = "qgss-2025" # for IBM Qiskit Global Summer School 2025
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "qiskit[visualization]>=2.1.0",
    "qiskit-ibm-runtime>=0.40.1",
    "qiskit-aer>=0.17.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "poethepoet>=0.36.0",
    "pylatexenc>=2.10",
    "ruff>=0.12.2",
    "qc-grader[qiskit,jupyter]",
]

[tool.uv.sources]
qc-grader = { git = "https://github.com/qiskit-community/Quantum-Challenge-Grader.git" }

[tool.ruff.lint]
ignore = ["E402", "E741", "F401", "F811", "F402"]

[tool.poe.tasks]
format = "uv run ruff format"
lab = "uv run jupyter lab"
check = "uv run ruff check"
init_submodules = "git submodule update --init --recursive"
update_submodules = "git submodule update --remote --merge"
update_dependencies = "uv sync -U"
update_project = ["update_submodules", "update_dependencies"]